# BOTCLAVE

./: .gitignore  DASHBOARD_DELIVERABLES.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  FLOWSURFACE_PORT_SUMMARY.md  README.md  SMC_IMPLEMENTATION_SUMMARY.md  pyproject.toml  test_implementation.py
config/: config.yaml  exchange_config.yaml  strategy_params.yaml
docs/: ARCHITECTURE.md  DASHBOARD_GUIDE.md  DEVELOPMENT.md  SETUP.md  SMC_INDICATORS.md  STRATEGY_IMPROVEMENTS.md
examples/: basic_usage.py  domain_models_example.py  smc_demo.py
scripts/: backtest.py  fetch_historical_data.py  generate_report.py  update_readme.py
src/botclave/: __init__.py  __main__.py
src/botclave/backtest/: __init__.py  backtester.py  validator.py
src/botclave/config/: __init__.py  manager.py
src/botclave/dashboard/: __init__.py  app.py  charts.py  metrics.py
src/botclave/dashboard/components/: alert_panel.py  chart_panel.py  metrics_panel.py  orderflow_panel.py  signals_log.py
src/botclave/dashboard/utils/: __init__.py  (+2 more)
src/botclave/domain/: README.md  __init__.py
src/botclave/engine/: __init__.py  depth.py  dom_builder.py  footprint.py  indicators.py  strategy.py
src/botclave/exchange/: __init__.py  binance_connector.py  order_manager.py
src/botclave/scripts/: __init__.py  fetch_data.py
tests/: test_backtest.py  test_depth.py  test_footprint.py  test_indicators.py  test_strategy.py  test_strategy_improved.py
tests/integration/: test_data_workflow.py
tests/unit/: test_config.py  test_data_ingestion.py  test_domain_models.py  test_domain_models_integration.py
(+9 files in other folders)
