[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "botclave"
version = "0.1.0"
description = "ICT Order Flow port for cryptocurrency trading analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "botclave", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
plotly = "^5.15.0"
pydantic = "^2.0.0"
ccxt = "^4.0.0"
pyyaml = "^6.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
streamlit = "^1.28.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.1.0"
black = "^23.0.0"

[tool.poetry.scripts]
botclave = "botclave.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"